traces/bug_90.txt
src/medit/menus.c:158: error: DEAD_STORE
  The value written to &ret (type int) is never used.
Showing all 1 steps of the trace


src/medit/menus.c:158:11: Write of unused value
156.             ret = streamRefTria(sc,mesh);
157.           else if ( reftype == LQuad )
158.             ret = streamRefQuad(sc,mesh);
                 ^
159.           if ( sc->picklist )  glDeleteLists(sc->picklist,1);
160.           sc->picklist = 0;
